2012-12-17  Nick Clifton  <nickc@redhat.com>

	* MAINTAINERS: Add copyright notice.
	* Makefile.am: Likewise.
	* NEWS: Likewise.
	* README: Likewise.
	* configure.host: Likewise.
	* configure.in: Likewise.
	* gen-doc.texi: Likewise.
	* h8-doc.texi: Likewise.
	* ldlex-wrapper.c: Likewise.
	* emulparams/README: Likewise.
	* emultempl/README: Likewise.
	* scripttempl/README: Likewise.
	* Makefile.in: Regenerate.

2012-12-17  Alan Modra  <amodra@gmail.com>

	PR ld/14962
	* ldexp.h (struct ldexp_control): Add "assign_name".
	* ldexp.c (fold_name <NAME>): Compare and clear assign_name on match.
	(exp_fold_tree_1): Remove existing code testing for self assignment.
	Instead set and test expld.assign_name.
	* ldlang.c (scan_for_self_assignment): Delete.
	(print_assignment): Instead set and test expld.assign_name.

2012-12-11  Roland McGrath  <mcgrathr@google.com>

	* emulparams/elf_nacl.sh (nacl_rodata_addr): New shell function.
	(RODATA_ADDR, SHLIB_RODATA_ADDR): Use it to base the calculation
	on SEGMENT_START("text-segment", ...) rather than ... alone.
	* Makefile.am (earmelf_nacl.c, earmelfb_nacl.c): Add missing
	dependency on $(srcdir)/emulparams/elf_nacl.sh.
	* Makefile.in: Regenerate.

2012-12-05  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/14915
	* emultempl/elf32.em (gld${EMULATION_NAME}_after_open): Also
	check DT_NEEDED entries when creating shared object with
	--copy-dt-needed-entries.

2012-12-05  Leif Ekblad  <leif@rdos.net>

	* configure.tgt: Add x86_64-*-rdos.

2012-12-03  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/14904
	* ldmain.c (main): Don't check plugin_load_plugins return.

	* lexsup.c (parse_args): Don't check plugin_opt_plugin return.

	* plugin.c (dlerror): New.  Defined if HAVE_DLFCN_H isn't
	defined.
	(plugin_opt_plugin): Change return type to void.  Stop on
	dlopen error and report error with dlerror ().
	(plugin_load_plugins): Change return type to void.  Stop on
	dlsym error and report error with dlerror ().  Don't use
	set_plugin_error.